custom input & button were added

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -10,5 +10,6 @@
   "financialTitlePart1": "Let's find out your financial\n",
   "financialTitlePart2": "wellness score.",
   "financialSubTitle": "Financial wellness test",
-  "financialDescription": "\nEnter your financial information below"
+  "financialDescription": "\nEnter your financial information below",
+  "financialDescription2": "Your financial information is encrypted and secure. We'll never share or sell any of your personal data."
 }
